# substrate-rpc-client

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  node_metadata.rs  utils.rs
src/extrinsic/: address.rs  mod.rs  xt_macros.rs  xt_primitives.rs
src/rpc/: client.rs  json_req.rs  mod.rs
