[package]
name = "substrate-rpc-client"
version = "0.1.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
env_logger = "0.7"
hex = { version = "0.4", default-features=false, optional = true }
log = "0.4"
primitive-types = { version = "0.6", default-features = false, features = ["codec"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
websocket = { version = "0.24", optional = true }
ws = { version = "0.9", optional = true }

keyring = { version = "2.0.0", package = "sp-keyring", git = "https://github.com/paritytech/substrate", optional = true }
metadata = { version = "10.0.0", package = "frame-metadata", git = "https://github.com/paritytech/substrate", default-features=false, rev = "8f4495886a98d4a867d3f3813a8bf4dc6bca3a3f" }
node-primitives = { git = "https://github.com/paritytech/substrate", default-features=false }
sp-core = { version = "2.0.0", package = "sp-core", git = "https://github.com/paritytech/substrate", default-features=false }
sp-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features=false }
sp-std = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features=false }
sp-version = { version = "2.0.0", git = "https://github.com/paritytech/substrate", default-features=false }

[dev-dependencies]
eos-chain = { git = "https://github.com/bifrost-codes/rust-eos", branch = "use-rust-secp256k1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"hex",
	"metadata/std",
	"node-primitives/std",
	"keyring",
	"serde/std",
	"serde_json",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"websocket",
	"ws",
]
